--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,24 @@
     <string name="break_label">Break</string>
     <string name="completed_label">Completed</string>
     <string name="start_timer">Start</string>
+    <string name="pause_timer">Pause</string>
     <string name="reset_timer">Reset</string>
+    <string name="stop_timer">Stop</string>
     <string name="settings">Settings</string>
+    <string name="paused_label">Paused</string>
+    <string name="done_label">Done</string>
+    <string name="focus_time_label">Focus time</string>
+    <string name="break_time_label">Break time</string>
+    <string name="total_rounds_label">Total rounds</string>
+    <string name="focus_description">Set duration for focus sessions</string>
+    <string name="break_description">Set duration for breaks</string>
+    <string name="rounds_description">Set number of sessions</string>
+    <string name="timer_running">Timer running</string>
+    <string name="notification_channel_name">Pomodoro Timer Channel</string>
+    <string name="phase_complete_title">Pomodoro Finished!</string>
+    <string name="phase_complete_text">Phase complete</string>
+    <string name="open_app">Open App</string>
+    <string name="pomodoro_completed_title">Pomodoro Completed!</string>
+    <string name="pomodoro_completed_text">All rounds finished.</string>
+    <string name="remaining_time">Remaining: %s</string>
 </resources>
